# zchat

./: .env  Cargo.toml  README.md  cliff.toml
.github/workflows/: build.yml
chat_server/: Cargo.toml
chat_server/sql/: schema.sql
chat_server/src/: config.rs  lib.rs
chat_server/src/handlers/: chat.rs  mod.rs  msg.rs
chat_server/src/models/: user.rs
config/: config.toml
migrations/: 20240628054802_initial.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: main.rs  sse.rs
src/: config.rs  handler.rs  lib.rs  main.rs  serve.rs
