[package]
name = "zchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
dashmap = "5.5.3"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs", "net"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
toml = "0.8.13"
tracing = "0.1.40"
